--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -23,19 +23,28 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.2.min.css">
         <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
+        <div class="app" data-role="page">
+            <div data-role="header" data-position="fixed" data-theme="b">
+                <h1>SkyFot.com</h1>
+                <a onclick="captureImage();" data-icon="check" class="ui-btn-right">SnapOne</a>
+            </div><!-- /header -->
+            <div id="deviceready" class="blink" data-role="content">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
-                <button onclick="captureImage();">Capture Image</button>
             </div>
+            <!--<div data-role="footer">
+                <h4>My Footer</h4>
+            </div> /footer -->
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+
+        <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+        <script type="text/javascript" src="js/jquery.mobile-1.3.2.min.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
@@ -46,6 +55,7 @@
                 for (var i = 0, len = mediaFiles.length; i < len; i += 1) {
                     // console.log();
                     showAlert();
+                    uploadFile(mediaFiles[i]);
                 }
             }
 
@@ -76,6 +86,24 @@
                     'Game Over',            // title
                     'Done'                  // buttonName
                 );
+            }
+
+            // Upload files to server
+            function uploadFile(mediaFile) {
+                var ft = new FileTransfer(),
+                    path = mediaFile.fullPath,
+                    name = mediaFile.name;
+
+                ft.upload(path,
+                    "http://192.168.1.107:8000/upload",
+                    function(result) {
+                        console.log('Upload success: ' + result.responseCode);
+                        console.log(result.byteSent + 'bytes sent');
+                    },
+                    function(error) {
+                        console.log('Error uploading file ' + path + ': ' + error.code);
+                    },
+                    { source: name});
             }
         </script>
     </body>
